testcrate/ui/borrowed-argument.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/borrowed-argument.rs:14:17
   |
14 |     await!(bar(&a))?;
   |                 ^ borrowed value does not live long enough
...
17 | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: `a` does not live long enough
  --> $DIR/borrowed-argument.rs:21:17
   |
21 |     await!(bar(&a))?;
   |                 ^ borrowed value does not live long enough
...
25 | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 2 previous errors

